apps/tencentcloud/jenkins/release/staging/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: controller-staging
  namespace: jenkins
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: infra
  hostnames:
    - "${INGRESS_HOST}"
  rules:
    - backendRefs:
        - name: jenkins-staging
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: "${INGRESS_PATH}-staging"
